Add a shortcut for Meta+P

Summary:
Also relevant: http://mjg59.livejournal.com/121851.html

BUG:365147

Reviewers: #plasma, davidedmundson, graesslin

Reviewed By: #plasma, davidedmundson, graesslin

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2112